# Hoshiguma

./: .gitignore  README.md  cooler-notes.md  devenv.nix  flake.nix  rust-toolchain.toml  treefmt.toml
common/: Cargo.toml
common/foundational-data/: Cargo.toml
common/foundational-data/src/: koishi.rs  lib.rs  satori.rs
common/telemetry-receiver/: Cargo.toml
common/telemetry-receiver/src/: main.rs
control-tools/: Cargo.toml
control-tools/src/cooler_independant/: main.rs
control-tools/src/cooler_rate_calibration/: main.rs
control-tools/src/cooler_test/: main.rs
control-tools/src/hmi_test/: main.rs
control-tools/src/lib/: lib.rs
control-tools/src/rear_sensor_board_test/: main.rs
control-tools/src/telemetry_bridge_test/: main.rs
cooler-firmware/: Cargo.toml  rust-toolchain.toml
cooler-firmware/src/: machine.rs  main.rs  rpc.rs
cooler-firmware/src/devices/: compressor.rs  coolant_flow_sensor.rs  coolant_pump.rs  coolant_reservoir_level_sensor.rs  header_tank_level_sensor.rs  heat_exchanger_level_sensor.rs  mod.rs  radiator_fan.rs  stirrer.rs  temperature_sensors.rs
diagnostic-cli/: Cargo.toml  rust-toolchain.toml
diagnostic-cli/src/: cooler.rs  extraction_airflow_sensor.rs  main.rs  peripheral_controller.rs
diagnostic-cli/src/peripheral_controller/: dashboard.rs  mod.rs
extraction-airflow-sensor-firmware/: Cargo.toml  rust-toolchain.toml
extraction-airflow-sensor-firmware/src/: main.rs  rpc.rs  sdp810.rs
firmware/cooler/: Cargo.toml  Justfile
firmware/cooler/src/: api.rs  machine.rs  main.rs  network.rs  rpc.rs
firmware/cooler/src/devices/: compressor.rs  coolant_flow_sensor.rs  coolant_pump.rs  coolant_rate_sensors.rs  coolant_reservoir_level_sensor.rs  mod.rs  (+2 more)
firmware/demo/: Cargo.toml  README.md
firmware/demo/.cargo/: config.toml
firmware/demo/src/: main.rs
firmware/hmi/: Cargo.toml  Justfile
firmware/hmi/src/: access_control.rs  api.rs  main.rs  network.rs
firmware/lib/core/: Cargo.toml
firmware/lib/hoshiguma-api/: Cargo.toml
firmware/lib/hoshiguma-api-client/: Cargo.toml
firmware/lib/hoshiguma-common/: Cargo.toml
firmware/orchestrator/: Cargo.toml  Justfile
firmware/orchestrator/.cargo/: config.toml
firmware/orchestrator/src/: api.rs  cli.rs  hmi.rs  input_change_detector.rs  main.rs  network.rs  polled_input.rs  remote_device_monitor.rs  self_telemetry.rs  telemetry.rs  telemetry_bridge_comm.rs  trace.rs  wall_time.rs
firmware/rear-sensor-board/: Cargo.toml  Justfile
firmware/rear-sensor-board/src/: api.rs  main.rs  network.rs  sdp810.rs
firmware/telemetry-bridge/: Cargo.toml  Justfile
firmware/telemetry-bridge/.cargo/: config.toml
firmware/telemetry-bridge/src/: api.rs  buttons.rs  display.rs  main.rs  network.rs  self_telemetry.rs  telegraf_buffer.rs  telemetry_tx.rs  ui.rs  usb_serial.rs  wall_time.rs
icd/: Cargo.toml
icd/src/: lib.rs
icd/src/payload/: mod.rs
koishi/firmware/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
koishi/firmware/src/: checked_update.rs  main.rs  telemetry.rs  unwrap_simple.rs
koishi/postcard-data-receiver/: Cargo.toml  flake.nix
koishi/postcard-data-receiver/src/: main.rs  protocol.rs
peripheral-controller-firmware/: Cargo.toml
peripheral-controller-firmware/.cargo/: config.toml
peripheral-controller-firmware/src/: changed.rs  cli.rs  cooler.rs  main.rs  self_telemetry.rs  telemetry.rs  trace.rs
peripheral-controller-firmware/src/devices/: air_assist.rs  air_assist_demand_detector.rs  air_assist_pump.rs  chassis_intrusion_detector.rs  coolant_resevoir_level_sensor.rs  cooler.rs  fume_extraction_fan.rs  fume_extraction_mode_switch.rs  laser_enable.rs  machine_enable.rs  machine_power.rs  machine_power_detector.rs  machine_run_detector.rs  mod.rs  status_lamp.rs  temperature_sensors.rs
peripheral-controller-firmware/src/logic/: air_assist.rs  cooling.rs  fume_extraction.rs  mod.rs  status_lamp.rs
peripheral-controller/firmware/: Cargo.toml  README.md
peripheral-controller/firmware/src/: main.rs  polled_input.rs  status_lamp.rs  telemetry.rs
peripheral-controller/telemetry-protocol/: Cargo.toml
peripheral-controller/telemetry-protocol/src/: lib.rs
peripheral-controller/telemetry-receiver/: Cargo.toml  rust-toolchain.toml
peripheral-controller/telemetry-receiver/src/: main.rs
protocol/: Cargo.toml
protocol/src/: event_queue.rs  lib.rs  serial.rs  string_registry.rs  types.rs
protocol/src/accessory_bus/: mod.rs
protocol/src/common/: rpc.rs  types.rs
protocol/src/cooler/: event.rs  mod.rs  rpc.rs  types.rs
protocol/src/extraction_airflow_sensor/: rpc.rs  types.rs
protocol/src/payload/: mod.rs
protocol/src/peripheral_controller/: event.rs  mod.rs  rpc.rs  types.rs
protocol/src/transport/: embassy_uart_no_std.rs  mod.rs  serial_std.rs
rpc-demo-host/: Cargo.toml
rpc-demo-host/src/: client.rs
satori/firmware/: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
satori/firmware/.cargo/: config.toml
satori/firmware/firmware/: Cargo.toml  README.md
satori/firmware/mqtt-config/: Cargo.toml
satori/firmware/src/: frequency_counter.rs  main.rs  reporting.rs  status.rs  telemetry.rs
satori/firmware/state/: Cargo.toml
teeny-rpc/: Cargo.toml  README.md
teeny-rpc/examples/pc/: Cargo.toml
teeny-rpc/examples/pi-pico/: Cargo.toml
teeny-rpc/src/: client.rs  lib.rs  server.rs  test.rs
teeny-rpc/src/transport/: embedded.rs  mod.rs  serialport.rs  tokio_channels.rs
telemetry-module-firmware/: Cargo.toml  rust-toolchain.toml
telemetry-module-firmware/.cargo/: config.toml
telemetry-module-firmware/src/: buttons.rs  main.rs  metric.rs  rpc_server.rs  self_telemetry.rs  telemetry.rs  trace.rs  ui_button.rs  usb_serial.rs  wifi.rs
telemetry-module-firmware/src/display/: boot_screen.rs  mod.rs  state.rs
telemetry-module-firmware/src/network/: mod.rs  mqtt.rs  telemetry_tx.rs  time.rs
telemetry-module-firmware/src/telemetry/: machine.rs  mod.rs  system.rs
telemetry-module/firmware/: Cargo.toml  build.rs  config.toml
telemetry-module/firmware/src/: main.rs  telemetry.rs  ui_button.rs  wifi.rs
(+505 files in other folders)
