[workspace]
resolver = "2"
members = [
  "foundational-data",
  "telemetry-receiver",
]

[workspace.package]
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
postcard = { version = "1.0.6", default-features = false }
serde = { version = "1.0.174", default-features = false, features = ["derive"] }
