[package]
name = "hoshiguma-control-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "hoshiguma_api_client"
path = "src/lib/lib.rs"

[[bin]]
name = "cooler-rate-calibration"
path = "src/cooler_rate_calibration/main.rs"

[[bin]]
name = "cooler-independant"
path = "src/cooler_independant/main.rs"

[[bin]]
name = "cooler-test"
path = "src/cooler_test/main.rs"

[[bin]]
name = "hmi-test"
path = "src/hmi_test/main.rs"

[[bin]]
name = "rear-sensor-board-test"
path = "src/rear_sensor_board_test/main.rs"

[[bin]]
name = "telemetry-bridge-test"
path = "src/telemetry_bridge_test/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.10"
heapless = "0.9.3"
hoshiguma-api = { path = "../firmware/lib/hoshiguma-api" }
log = "0.4.29"
postcard = { version = "1", default-features = false }
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
