[package]
name = "hoshiguma-diagnostic-cli"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.7"
hoshiguma-protocol = { path = "../protocol" }
log = "0.4.28"
teeny-rpc = "0.1.0"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
unused_crate_dependencies = "deny"
