[package]
name = "workbook-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard-rpc]
version = "0.11"

[dependencies.postcard-schema]
version = "0.2.1"
features = ["derive"]

[patch.crates-io]
postcard-rpc = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "4bab5bcb4ad853b95592f742d9c8de3c3aa96b08"}

[features]
use-std = []
