[package]
name = "hoshiguma-telemetry-protocol"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }

[lints.rust]
unused_crate_dependencies = "deny"
