[package]
name = "hoshiguma-periperal-controller"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
default = []
panic-probe = ["dep:panic-probe"]
test-panic-on-core-0 = []
test-panic-on-core-1 = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embassy-rp = { version = "0.4.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
pico-plc-bsp = { git = "https://github.com/DanNixon/pico-plc" }
assign-resources = "0.4.1"

embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

embassy-sync = { git = "https://github.com/embassy-rs/embassy/", features = ["defmt"] }
embassy-futures = "0.1.1"
embassy-time-driver = "0.2.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
static_cell = "2.1.0"

one-wire-bus = "0.1.1"
ds18b20 = "0.1.1"

git-version = "0.3.5"

teeny-rpc = { path = "../teeny-rpc", default-features = false, features = ["no-std"] }
hoshiguma-protocol = { path = "../protocol", default-features = false, features = ["no-std"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
