[package]
name = "hoshiguma-periperal-controller"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
trace = ["embassy-executor/trace"]
panic-probe = ["dep:panic-probe"]
test-panic-on-core-0 = []
test-panic-on-core-1 = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
pico-plc-bsp = { git = "https://github.com/DanNixon/pico-plc", features = ["rp2040"] }
assign-resources = "0.5.0"

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-time-driver = "0.2.0"
portable-atomic = { version = "1.13.0", features = ["critical-section"] }
static_cell = "2.1.0"

one-wire-bus = "0.1.1"
ds18b20 = "0.1.1"

git-version = "0.3.5"

teeny-rpc = { version = "0.1.1", default-features = false, features = ["no-std"] }
hoshiguma-protocol = { path = "../protocol", default-features = false, features = ["no-std"] }

heapless = { version = "0.9.1", features = ["defmt"] }
embassy-usb = "0.5.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
