[package]
name = "hoshiguma-telemetry-module"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
trace = ["embassy-executor/trace"]
test-panic-on-core-0 = []

[dependencies]
cortex-m-rt = "0.7.3"
embassy-rp = { version = "0.3.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
assign-resources = "0.4.1"

# Wifi
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }
embassy-net = { version = "0.6.0", features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp", "udp"] }
rand = { version = "0.8.5", default-features = false }

embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }

embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embedded-nal-async = "0.8.0"

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

embassy-sync = "0.6.0"
embassy-futures = "0.1.1"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
static_cell = "2.1.1"

heapless = { git = "https://github.com/rust-embedded/heapless", rev = "4e31d3e604a15739d064ae729eb8fb8b5bda3b46", features = ["defmt-03"] }

# Telemetry RX
teeny-rpc = { git = "https://github.com/DanNixon/teeny-rpc", default-features = false, features = ["no-std"] }
hoshiguma-protocol = { path = "../protocol", default-features = false, features = ["no-std"] }
git-version = "0.3.5"

# Display
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"

# Telemetry TX
reqwless = { version = "0.13.0", features = ["defmt", "alloc"] }
sntpc = { version = "0.5.2", features = ["defmt", "embassy-socket"], default-features = false }

[patch.crates-io]
embassy-executor    = { git = "https://github.com/embassy-rs/embassy", rev = "cee3b49344f47284cd2554c169aa3592929006da" }
embassy-sync        = { git = "https://github.com/embassy-rs/embassy", rev = "cee3b49344f47284cd2554c169aa3592929006da" }
embassy-time        = { git = "https://github.com/embassy-rs/embassy", rev = "cee3b49344f47284cd2554c169aa3592929006da" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "cee3b49344f47284cd2554c169aa3592929006da" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
