[package]
name = "hoshiguma-telemetry-module"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[features]
trace = ["embassy-executor/trace"]
test-panic-on-core-0 = []

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.7.1", features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp", "udp"] }
embassy-net-wiznet = "0.2.1"
embassy-rp = { version = "0.8.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-nal-async = "0.8.0"
git-version = "0.3.5"
heapless = { git = "https://github.com/rust-embedded/heapless", rev = "4e31d3e604a15739d064ae729eb8fb8b5bda3b46", features = ["defmt-03"] }
hoshiguma-protocol = { path = "../protocol", default-features = false, features = ["no-std"] }
mipidsi = "0.9.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
reqwless = { version = "0.13.0", features = ["defmt", "alloc"] }
sntpc = { version = "0.6.1", features = ["defmt", "embassy-socket"], default-features = false }
static_cell = "2.1.0"
teeny-rpc = { version = "0.1.1", default-features = false, features = ["no-std"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
