[package]
name = "hoshiguma-foundational-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
enumset = { version = "1.1.3", features = ["serde"] }
heapless = { version = "0.8.0", features = ["serde"] }
postcard.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]
