[package]
name = "telemetry-receiver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.3.18", features = ["derive"] }
git-version = "0.3.5"
postcard = { workspace = true, features = ["use-std"] }
serde.workspace = true
serialport = "4.2.1"
hoshiguma-foundational-data = { path = "../foundational-data" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
