[package]
name = "hoshiguma-cooler"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "hoshiguma-cooler"
test = false
bench = false

[features]
default = []
panic-probe = ["dep:panic-probe"]
test-panic-on-core-0 = []

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
ds18b20 = "0.1.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt"] }
git-version = "0.3.5"
hoshiguma-api = { path = "../lib/hoshiguma-api", default-features = false, features = ["device-cooler"] }
hoshiguma-core = { path = "../lib/core", default-features = false, features = ["no-std"] }
hoshiguma-telemetry = { path = "../lib/hoshiguma-telemetry", default-features = false }
one-wire-bus = "0.1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
portable-atomic = { version = "1.10.0", default-features = false, features = ["critical-section"] }
static_cell = "2.1.0"
teeny-rpc = { version = "0.1.1", default-features = false, features = ["no-std"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
# TODO
# unused_crate_dependencies = "deny"
