[package]
name = "extraction-airflow-sensor"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "extraction-airflow-sensor"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1.2", default-features = false, features = ["defmt"] }
embassy-net = { version = "0.8.0", features = ["defmt", "dhcpv4", "medium-ethernet", "proto-ipv4", "tcp", "udp"] }
embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-io-async = "0.7.0"
heapless = { version = "0.9.1", default-features = false, features = ["defmt"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11", features = ["critical-section"] }
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
# unused_crate_dependencies = "deny"
