[package]
name = "hoshiguma-hmi"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "hoshiguma-hmi"
test = false
bench = false

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.0"
embedded-alloc = "0.7.0"
embedded-graphics = "0.8.2"
git-version = "0.3.9"
heapless = "0.9.2"
hoshiguma-api = { path = "../lib/hoshiguma-api", default-features = false }
hoshiguma-common = { path = "../lib/hoshiguma-common", features = [] }
mousefood = { version = "0.5.0", default-features = false, features = ["fonts"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
peek-o-display-bsp = { git = "https://github.com/DanNixon/peek-o-display", features = ["rp2040"] }
ratatui = { version = "0.30.0", default-features = false, features = ["all-widgets", "portable-atomic"] }
serde = { version = "1.0.228", default-features = false }
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
