[package]
name = "hoshiguma-hmi"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "hoshiguma-hmi"
test = false
bench = false

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-net = { version = "0.9.1", features = ["defmt", "dhcpv4", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.0"
embedded-graphics = "0.8.1"
embedded-io-async = "0.7.0"
git-version = "0.3.9"
heapless = "0.9.2"
hoshiguma-api = { path = "../lib/hoshiguma-api", default-features = false, features = ["device-hmi"] }
hoshiguma-common = { path = "../lib/hoshiguma-common", features = [] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
peek-o-display-bsp = { git = "https://github.com/DanNixon/peek-o-display", features = ["rp2040"] }
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
#unused_crate_dependencies = "deny"
