[package]
name = "hoshiguma-orchestrator"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[features]
trace = ["embassy-executor/trace"]
panic-probe = ["dep:panic-probe"]
test-panic-on-core-0 = []
test-panic-on-core-1 = []

[dependencies]
assign-resources = "0.5.0"
chrono = { version = "0.4.43", default-features = false, features = ["defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
ds18b20 = "0.1.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-time-driver = "0.2.0"
embassy-usb = "0.5.1"
git-version = "0.3.5"
heapless = { version = "0.9.1", features = ["defmt"] }
hoshiguma-core = { path = "../lib/core", default-features = false, features = ["no-std"] }
one-wire-bus = "0.1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
portable-atomic = { version = "1.13.0", default-features = false, features = ["critical-section"] }
static_cell = "2.1.0"
teeny-rpc = { version = "0.1.1", default-features = false, features = ["no-std"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
