[package]
name = "hoshiguma-rear-sensor-board"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "hoshiguma-rear-sensor-board"
test = false
bench = false

[features]
default = []
panic-probe = ["dep:panic-probe"]

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.5"
crc = "3.4.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["rp235xa", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io-async = "0.7.0"
git-version = "0.3.5"
heapless = "0.9.2"
hoshiguma-api = { path = "../lib/hoshiguma-api", default-features = false, features = ["device-rear-sensor-board"] }
hoshiguma-common = { path = "../lib/hoshiguma-common" }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
portable-atomic = { version = "1.13.0", features = ["critical-section"] }
postcard = "1.1.3"
sensirion-i2c = { version = "0.4.0", features = ["embedded-hal-async"] }
static_cell = "2.1.0"
teeny-rpc = { version = "0.1.1", default-features = false, features = ["no-std"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
#unused_crate_dependencies = "deny"
