[package]
name = "hoshiguma-telemetry-bridge"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "hoshiguma-telemetry-bridge"
test = false
bench = false

[dependencies]
assign-resources = "0.5.0"
chrono = { version = "0.4.43", default-features = false, features = ["defmt"] }
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
der = { version = "0.8.0", default-features = false, features = ["heapless"] } # Required due to https://github.com/drogue-iot/embedded-tls/issues/181
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp", "udp"] }
embassy-net-wiznet = "0.3.0"
embassy-rp = { version = "0.10.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-nal-async = "0.9.0"
embedded-text = "0.7.3"
git-version = "0.3.5"
heapless = { version = "0.9.2", features = ["defmt"] }
hoshiguma-api = { path = "../lib/hoshiguma-api", default-features = false, features = ["device-telemetry-bridge"] }
hoshiguma-common = { path = "../lib/hoshiguma-common" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13.0", features = ["critical-section"] }
reqwless = { version = "0.14.0", features = ["defmt", "alloc"] }
sntpc = { version = "0.9.0", default-features = false, features = ["defmt"] }
sntpc-net-embassy = { version = "0.9.0", default-features = false, features = ["defmt"] }
ssd1306 = "0.10.0"
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
