[package]
name = "koishi"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
devkit = []
simulator = []

[[bin]]
name = "koishi"
test = false
bench = false

[dependencies]
atmega-hal = { git = "https://github.com/rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4", features = ["atmega328p"] }
avr-device = { version = "0.5.1", features = ["rt", "atmega328p"] }
avr-hal-generic = { git = "https://github.com/rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4" }
embedded-hal = "0.2.3"
nb = "0.1.2"
ufmt = "0.1.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
